fix scrolling on ios

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -24,7 +24,6 @@
 }
 
 .app-content {
-  min-height: 100vh;
   padding-top: 5px;
   padding-left: 20vw;
   padding-right: 20vw;
